devops/k8s/apc/base/services.yml
apiVersion: v1
kind: Service
metadata:
  name: iknito-camunda
spec:
  selector:
    app: iknito-camunda
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: iknito-smartfund
spec:
  selector:
    app: iknito-smartfund
  ports:
  - port: 3000
    targetPort: 3000
# TODO: a service for postgres
